...
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="1 1 + e1 *" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="0eK-18-EHm">
                                <rect key="frame" x="20" y="92" width="325.5" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="InputTextField"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v91-Hf-aPR">
                                <rect key="frame" x="353.5" y="96" width="40.5" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="CalcButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="lGV-HX-3Dt"/>
                                </constraints>
                                <state key="normal" title="Calc"/>
                                <connections>
                                    <action selector="calc:" destination="BYZ-38-t0r" eventType="touchUpInside" id="5IY-su-Cic"/>
...
